# Render

./: .gitignore  CMakeLists.txt  convert.ps1
cmake/: FindBasicData.cmake  FindFreetype.cmake  FindMeshData.cmake  FindMxFunctions.cmake  FindQwt.cmake  Findffmpeg.cmake  Findffms.cmake  InitRuntime.cmake
file/: vectorfield.txt  拾取.txt  视图操作功能表.xlsx
resource/: RendLabel.qrc  Render.qrc
resource/GLSL/: Arrow_Common.glsl  Arrow_GlobalAxis.glsl  Arrow_MinMax.glsl  BackGround.glsl  Common.glsl  CommonTextureShape.glsl  Font_Arrow.glsl  Font_Common.glsl  Font_Fixed.glsl  Font_GlobalAxis.glsl  ModelTestRend.glsl  ModelTestRendMat.glsl  ModelTestRendNormalMap.glsl  PostContourFaceWithOutDeformation.glsl  PostContourLineWithOutDeformation.glsl  PostCuttingPlaneWithOutDeformation.glsl  PostEdgeLineWithDeformation.glsl  PostHighLightFaceLine.glsl  PostHighLightLine.glsl  PostHighLightPoint.glsl  PostMeshFaceLineWithDeformation.glsl  PostMeshFaceTransparentWithDeformation.glsl  PostMeshFaceTransparentWithOutDeformation.glsl  PostMeshFaceWithDeformation.glsl  PostMeshLineWithDeformation.glsl  PostMeshPointWithDeformation.glsl  PostStreamLinePointWithOutDeformation.glsl  PostTable.glsl  PostTableLine.glsl  PostTransparentPlaneWithOutDeformation.glsl  PreGeoMeshDotLine.glsl  PreGeoMeshEdgeLine.glsl  PreGeoMeshFace.glsl  PreGeoMeshLine.glsl  PreGeoPoint.glsl  PreHighLightGeoMeshFace.glsl  PreHighLightGeoMeshLine.glsl  PreHighLightGeoPoint.glsl  PreMeshFaceLine-1.glsl  PreMeshFaceLine.glsl  (+5 more)
resource/GLSLLabel/: Font_Arrow.vert  Font_Common.frag  Font_Common.vert  Font_FixShape.frag  Font_FixShape.vert  Font_Fixed.frag  Font_Fixed.vert  Font_GlobalAxis.vert  Lable_Arrow.vert  Lable_BCDF.frag  Lable_BCDF.vert  Lable_FixShape.frag  Lable_FixShape.vert  Lable_FixShapeRotate.frag  Lable_FixShapeRotate.vert  Lable_FixShapeRotate2.vert  Lable_GlobalAxis.frag  Lable_GlobalAxis.vert  Lable_Model.frag  Lable_Model.vert  Lable_Point.frag
src/: CMakeLists.txt
src/Main/: CMakeLists.txt  MxRendTest.cpp  MxRendTest.h  MxRendTest.ui  ScreenWidget.cpp  ScreenWidget.h  VideoWidget.cpp  VideoWidget.h  VideoWidget.ui  gif.h  mIFluentBCMeshFile.cpp  mIFluentBCMeshFile.h  mIMxdbFile1.cpp  mIMxdbFile1.h  main.cpp
src/RendBase/: Array.h  CMakeLists.txt  Callback.h  Drawable.cpp  Drawable.h  Frode.cpp  Frode.h  Frustum.h  Geode.cpp  Geode.h  Geometry.cpp  Geometry.h  Group.cpp  Group.h  Node.cpp  Node.h  NodeVisitor.cpp  NodeVisitor.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  Space.cpp  Space.h  StateAttribute.cpp  StateAttribute.h  StateSet.cpp  StateSet.h  Taa.h  Viewer.cpp  Viewer.h  app.cpp  app.h  appInstance.cpp  appInstance.h  asset.cpp  asset.h  buffer.cpp  buffer.h  fbo.cpp  (+19 more)
src/RendBasic/: CMakeLists.txt  mAppConfigurationSingleton.cpp  mAppConfigurationSingleton.h  mBasicEnum.h  mBasicStruct.h  mBasicStructor.h  mCameraCommonView.cpp  mCameraCommonView.h  mCameraModelView.cpp  mCameraModelView.h  mColor.cpp  mColor.h  mCommonFunctions.cpp  mCommonFunctions.h  mCommonView.cpp  mCommonView.h  mContainers.cpp  mContainers.h  mFileConfiguration.cpp  mFileConfiguration.h  mGlobalVarible.cpp  mGlobalVarible.h  mMeshViewEnum.h  mModelView.cpp  mModelView.h  mPickToolClass.cpp  mPickToolClass.h  mPostEnum.h  mTest.h  mViewBase.cpp  mViewBase.h  mViewToolClass.cpp  mViewToolClass.h  rendbasic_global.h
src/RendData/: CMakeLists.txt  SpaceTree.cpp  SpaceTree.h  mDataPost1.cpp  mDataPost1.h  mGeoFaceData1.cpp  mGeoFaceData1.h  mGeoLineData1.cpp  mGeoLineData1.h  mGeoModelData1.cpp  mGeoModelData1.h  mGeoPartData1.cpp  mGeoPartData1.h  mGeoPickData1.cpp  mGeoPickData1.h  mGeoPointData1.cpp  mGeoPointData1.h  mGeoSolidData1.cpp  mGeoSolidData1.h  mMeshData.cpp  mMeshData.h  mMeshFaceData.cpp  mMeshFaceData.h  mMeshLineData.cpp  mMeshLineData.h  mMeshModelData.cpp  mMeshModelData.h  mMeshNodeData.cpp  mMeshNodeData.h  mMeshPartData.cpp  mMeshPartData.h  mOneFrameData1.cpp  mOneFrameData1.h  mPostAnimationRendData.cpp  mPostAnimationRendData.h  mPostColorTableData.cpp  mPostColorTableData.h  mPostMeshData1.cpp  mPostMeshData1.h  mPostMeshFaceData1.cpp  (+30 more)
src/RendLabel/: CMakeLists.txt  mLableRendArrow.h  mLableRendAxis.h  mLableRendBCDF.h  mLableRendBase.h  mLableRendCommon.h  mLableRendController_common.h  mLableRendController_post.h  mLableRendController_pre.h  mLableRendEnum.h  mLableRendFaceToFace.h  mLableRendFixShape.h  mLableRendFixShapeRotate.h  mLableRendFixShapeRotate2.h  mLableRendFont.cpp  mLableRendFont.h  mLableRendIntegrateBase.h  mLableRendIntegrate_Common.cpp  mLableRendIntegrate_Common.h  mLableRendIntegrate_post.cpp  mLableRendIntegrate_post.h  mLableRendIntegrate_pre.cpp  mLableRendIntegrate_pre.h  mLableRendModel.h  mLableShaderManager.cpp  mLableShaderManager.h  mLableShapeVertex.cpp  mLableShapeVertex.h  mTest.h  rendlabel_global.h
src/RendLabelData/: CMakeLists.txt  mLableData.h  mLableDataController_common.cpp  mLableDataController_common.h  mLableDataController_post.cpp  mLableDataController_post.h  mLableDataController_pre.cpp  mLableDataController_pre.h  mLableDataEnum.h  mLableDataStruct.h  mLableDataTemplate.h  rendlabeldata_global.h
src/RendView/: CMakeLists.txt  mArrowRender.cpp  mArrowRender.h  mBackGroundRender.cpp  mBackGroundRender.h  mBaseRend.cpp  mBaseRend.h  mBaseRend2D.cpp  mBaseRend2D.h  mBaseRend3D.cpp  mBaseRend3D.h  mBaseRender.cpp  mBaseRender.h  mFontRender.cpp  mFontRender.h  mGlobalAxisRender.cpp  mGlobalAxisRender.h  mGroupRender.h  mLineChart.cpp  mLineChart.h  mModelTestRender.cpp  mModelTestRender.h  mPlotBasic.h  mPlotView.cpp  mPlotView.h  mPlotViewStyleDialog.cpp  mPlotViewStyleDialog.h  mPlotViewStyleDialog.ui  mPostAnimationRender.cpp  mPostAnimationRender.h  mPostColorTableRender.cpp  mPostColorTableRender.h  mPostContourRender.cpp  mPostContourRender.h  mPostCuttingPlaneRender.cpp  mPostCuttingPlaneRender.h  mPostDragRender.cpp  mPostDragRender.h  mPostFrameText.cpp  mPostFrameText.h  (+53 more)
